--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL=postgresql://smartbooks_db_duns_user:K6VQR41ddpegEb1TCRTlXODv407vkU5J@dpg-d3lk7jp5pdvs73aio4eg-a.oregon-postgres.render.com/smartbooks_db_duns
+DB_HOST="dpg-d3lk7jp5pdvs73aio4eg-a.oregon-postgres.render.com"
+DB_NAME="smartbooks_db_duns"
+DB_USER="smartbooks_db_duns_user"
+DB_PASS="K6VQR41ddpegEb1TCRTlXODv407vkU5J"
+DB_PORT="5432"
