--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\jorge\Downloads\addressbook_notes_calendar_pencil_6203.ico,0
+IconResource=C:\Users\jorge\OneDrive\Escritorio\Proyectos\addressbook_notes_calendar_pencil_6203.ico,0
 [ViewState]
 Mode=
 Vid=
